--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -26,7 +26,6 @@
         "\n",
         "---\n",
         "\n",
-        "\n",
         "\n"
       ]
     },
@@ -36,7 +35,7 @@
         "id": "gjkGMW8AT4BI"
       },
       "source": [
-        "**IMPORTING THE LIBRARIES**"
+        "## **IMPORTING THE LIBRARIES**"
       ]
     },
     {
@@ -83,7 +82,7 @@
         "id": "d0ppNDC5UZfc"
       },
       "source": [
-        "**STEP 1: DATA PREPROCESSING**"
+        "## **STEP 1: DATA PREPROCESSING**"
       ]
     },
     {
@@ -92,7 +91,7 @@
         "id": "JHPEUKm-UecM"
       },
       "source": [
-        "*IMPORTING THE DATASET*"
+        "### **IMPORTING THE DATASET**"
       ]
     },
     {
@@ -218,7 +217,7 @@
         "id": "FAjqikVuVkTr"
       },
       "source": [
-        "*CREATING A DICTIONARY THAT MAPS EACH LINES AND ITS ID*"
+        "### **CREATING A DICTIONARY THAT MAPS EACH LINES AND ITS ID**"
       ]
     },
     {
@@ -243,7 +242,7 @@
         "id": "RWcae1fTX6cU"
       },
       "source": [
-        "*CREATING A LIST OF ALL OF THE CONVERSATIONS*"
+        "### **CREATING A LIST OF ALL OF THE CONVERSATIONS**"
       ]
     },
     {
@@ -314,7 +313,7 @@
         "id": "7GAGeHm8ZybJ"
       },
       "source": [
-        "*GET THE QUESTIONS AND THE ANSWERS SEPARATELY*"
+        "### **GET THE QUESTIONS AND THE ANSWERS SEPARATELY**"
       ]
     },
     {
@@ -434,7 +433,7 @@
         "id": "Z_ZJ2rO8bk2c"
       },
       "source": [
-        "*CLEANING ALL THE TEXTS FUNCTION*"
+        "### **CLEANING ALL THE TEXTS FUNCTION**"
       ]
     },
     {
@@ -468,7 +467,7 @@
         "id": "8joFvfFWd-39"
       },
       "source": [
-        "*CLEANING THE QUESTIONS*"
+        "### **CLEANING THE QUESTIONS**"
       ]
     },
     {
@@ -538,7 +537,7 @@
         "id": "TbGszFk5eW3a"
       },
       "source": [
-        "*CLEANING THE ANSWERS*"
+        "### **CLEANING THE ANSWERS**"
       ]
     },
     {
