added the built nlp seq2seq model

--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -5,7 +5,18 @@
     "colab": {
       "name": "chatbot.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "gjkGMW8AT4BI",
+        "d0ppNDC5UZfc",
+        "OlLWxWkQLnEv",
+        "nsedleO9Lt2A",
+        "0XcV0-0yNnPf",
+        "_7nFQnjjQwuI",
+        "Qa44Osn5Uagy",
+        "Yiw6nVVWdjow",
+        "93Utu600hX35",
+        "IMBXKmF1lVJO"
+      ],
       "toc_visible": true
     },
     "kernelspec": {
@@ -61,7 +72,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eq9_lA0TUIoP",
-        "outputId": "abf53067-cedc-482b-eea2-02b4f65ef338"
+        "outputId": "953ce715-b111-4068-82b4-d8717d1b7968"
       },
       "source": [
         "from google.colab import drive\n",
@@ -126,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wfe0NAxZbNUJ",
-        "outputId": "2c07165a-baf6-4039-d037-234161957514"
+        "outputId": "91415b0e-7212-4e6b-b3aa-6710ef0e34cd"
       },
       "source": [
         "lines[0:20]"
@@ -173,7 +184,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vBnDBPs7bPoS",
-        "outputId": "9d124d48-16d5-4669-8772-99e973e2cbc5"
+        "outputId": "964d77b0-fe48-47fa-9e8a-502cacfc90fa"
       },
       "source": [
         "conversations[0:20]"
@@ -269,7 +280,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P_IWnldiZiyv",
-        "outputId": "54a93911-3ca0-4d57-e1bb-1897a40010b8"
+        "outputId": "2156de19-c7be-49b2-f9ab-9c23ba0f96bf"
       },
       "source": [
         "conversations_ids[0:20]"
@@ -342,7 +353,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zW8yUeIZaw78",
-        "outputId": "e0984a97-334f-4e5b-c76d-4e9dd94b0e0e"
+        "outputId": "07493f98-5a8e-442b-f3ab-c6ecdcaf37d3"
       },
       "source": [
         "questions[0:20]"
@@ -389,7 +400,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2PIAMsqda4ip",
-        "outputId": "d242d060-c071-45fe-fb6b-5de0741eda62"
+        "outputId": "33ad77fc-2590-4781-99d6-8489bc40fcc3"
       },
       "source": [
         "answers[0:20]"
@@ -494,7 +505,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FBSzp9KQehFX",
-        "outputId": "95cc2b9e-bd4f-41c7-b9b4-9582a0d7619b"
+        "outputId": "9e6f69cb-8be5-46e1-d933-ff027cef1aa5"
       },
       "source": [
         "clean_questions[0:20]"
@@ -564,7 +575,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ftTpHEKmej0n",
-        "outputId": "18593256-344a-4b0f-f374-290aba33fdbd"
+        "outputId": "ed43ec4e-9b9c-4301-947a-e0ce016724d7"
       },
       "source": [
         "clean_answers[0:20]"
@@ -752,7 +763,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "81b3Piulz23B",
-        "outputId": "8139a4d7-1c15-4ec2-cb3c-f3f49675a074"
+        "outputId": "9e9f756a-656c-405a-8762-975319a184fb"
       },
       "source": [
         "clean_answers[0:20]"
@@ -875,7 +886,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rwVCY8Om4dQf",
-        "outputId": "2889bbcb-8100-4841-a8e4-7c242ed85638"
+        "outputId": "c2f99f36-893d-4bd6-d109-b53a5d61dfa8"
       },
       "source": [
         "sorted_clean_questions[0:20]"
@@ -922,7 +933,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_TjBBe2V4fmr",
-        "outputId": "c5655beb-428b-4c7a-8ff7-607661d4e19b"
+        "outputId": "7f5716d0-4893-4269-f45b-42146a710293"
       },
       "source": [
         "sorted_clean_answers[0:20]"
@@ -1055,6 +1066,316 @@
           "execution_count": 28
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OlLWxWkQLnEv"
+      },
+      "source": [
+        "## **STEP 2: BUILDING THE NLP SEQUENCE TO SEQUENCE MODEL**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nsedleO9Lt2A"
+      },
+      "source": [
+        "### **CREATING PLACEHOLDERS FOR THE INPUTS AND THE TARGETS**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fQydvsUSLsln"
+      },
+      "source": [
+        "def model_inputs() :\n",
+        "  inputs = tf.placeholder(tf.int32, [None, None], name = 'input')\n",
+        "  targets = tf.placeholder(tf.int32, [None, None], name = 'target') \n",
+        "  lr = tf.placeholder(tf.float32, name = 'learning_rate')\n",
+        "  keep_prob = tf.placeholder(tf.float32, name = 'keep_prob')\n",
+        "  return inputs, targets, lr, keep_prob"
+      ],
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0XcV0-0yNnPf"
+      },
+      "source": [
+        "### **PREPROCESSING THE TARGETS INTO BATCHES OF SOME SIZE**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o3WfzXt2NeNa"
+      },
+      "source": [
+        "def preprocess_targets(targets, word2int, batch_size) :\n",
+        "  left_side = tf.fill([batch_size, 1], word2int['<SOS>']) # First word should be a starting token\n",
+        "  right_side = tf.strided_slice(targets, [0,0], [batch_size, -1], [1,1]) # Stride and slide each target\n",
+        "  preprocessed_targets = tf.concat([left_side, right_side], axis = 1)\n",
+        "  return preprocessed_targets"
+      ],
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_7nFQnjjQwuI"
+      },
+      "source": [
+        "### **CREATING THE ENCODING RNN LAYER { STACKED LSTM }**\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   RNN Inputs: Inputs, targets, lr etc.\n",
+        "*   RNN Size: Number of input tensors\n",
+        "*   RNN Layers\n",
+        "*   Keep_Prob: To control the dropout rate\n",
+        "*   Sequence_Length: length of questions\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rxffGzoRQ5SI"
+      },
+      "source": [
+        "def encoder_rnn(rnn_inputs, rnn_size, rnn_layers, keep_prob, sequence_length) : \n",
+        "  lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+        "  lstm_dropout = tf.contrib.rnn.DropoutWrapper(lstm, input_keep_prob = keep_prob)\n",
+        "  encoder_cell = tf.contrib.rnn.MultiRNNCell([lstm_dropout] * num_layers)\n",
+        "  _, encoder_state = tf.nn.bidirectional_dynamic_rnn(cell_fv = encoder_cell,\n",
+        "                                                                  cell_bv = encoder_cell,\n",
+        "                                                                  sequence_length = sequence_length,\n",
+        "                                                                  inputs = rnn_inputs,\n",
+        "                                                                  dtype = tf.float32\n",
+        "                                                                  ) # Input and ouput size of the forward and backward cell must match\n",
+        "  return encoder_state                                                                 "
+      ],
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qa44Osn5Uagy"
+      },
+      "source": [
+        "### **DECODING THE OBSERVATIONS ON THE TRAINING SET**\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   Encoder state: output from encoder_rnn_layer\n",
+        "*   Decoder cell: cell in the rnn decoder\n",
+        "*   Decoder embedded unit: unit on which embedding is applied on \n",
+        "*   Sequence_length\n",
+        "*   Decoding_Scope: ds that wraps tf variables\n",
+        "*   Output_function: fn used to return decoder o/p\n",
+        "*   Keep Prob\n",
+        "*   Batch_size\n",
+        "\n",
+        "\n",
+        "(Embedding: Mapping from discrete objects like words to real number vectors)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mWDTi282UdUw"
+      },
+      "source": [
+        "def decode_training_set(encoder_state, decoder_cell, decoder_embedded_input, sequence_length, decoding_scope, output_function, keep_prob, batch_size) :\n",
+        "  attention_states = tf.zeros([batch_size, 1, decoder_cell.output_size])\n",
+        "  attention_keys, attention_values, attention_score_function, attention_construct_function = tf.contrib.seq2seq.prepare_attention(attention_states, attention_option = \"bahdanau\", num_units = decoder_cell.output_size)\n",
+        "  training_decoder_function = tf.contrib.seq2seq.attention_decoder_fn_train(encoder_state[0],\n",
+        "                                                                            attention_keys,\n",
+        "                                                                            attention_values,\n",
+        "                                                                            attention_score_function,\n",
+        "                                                                            attention_construct_function,\n",
+        "                                                                            name = \"attn_dec_train\"\n",
+        "                                                                            ) # training for dynamic rnn decoder\n",
+        "  decoder_output, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
+        "                                                                training_decoder_function,\n",
+        "                                                                decoder_embedded_input,\n",
+        "                                                                sequence_length,\n",
+        "                                                                scope = decoding_scope\n",
+        "                                                                )\n",
+        "  decoder_output_dropout = tf.nn.dropout(decoder_output, keep_prob)\n",
+        "  return output_function(decoder_output_dropout)"
+      ],
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yiw6nVVWdjow"
+      },
+      "source": [
+        "### **DECODING THE OBSERVATIONS IN THE TEST/VALIDATION STATE**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sc7-5Cw3dp2H"
+      },
+      "source": [
+        "def decode_test_set(encoder_state, decoder_cell, decoder_embeddings_matrix, sos_id, eos_id, maximum_length, num_words, sequence_length, decoding_scope, output_function, keep_prob, batch_size) :\n",
+        "  attention_states = tf.zeroes([batch_size, 1, decoder_cell.output_size])\n",
+        "  attention_keys, attention_values, attention_score_function, attention_construct_function = tf.contrib.seq2seq.prepare_attention(attention_states, attention_option = \"bahdanau\", num_units = decoder_cell.output_size)\n",
+        "  # Testing for dynamic rnn decoder\n",
+        "  test_decoder_function = tf.contrib.seq2seq.attention_decoder_fn_inference(output_function,\n",
+        "                                                                            encoder_state[0],                                                                         encoder_state[0],\n",
+        "                                                                            attention_keys,\n",
+        "                                                                            attention_values,\n",
+        "                                                                            attention_score_function,\n",
+        "                                                                            attention_construct_function,\n",
+        "                                                                            decoder_embeddings_matrix,\n",
+        "                                                                            sos_id,\n",
+        "                                                                            eos_id,\n",
+        "                                                                            maximum_length,\n",
+        "                                                                            num_words,\n",
+        "                                                                            name = \"attn_dec_inf\"\n",
+        "                                                                            ) \n",
+        "  test_predictions, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
+        "                                                                  test_decoder_function,\n",
+        "                                                                  scope = decoding_scope\n",
+        "                                                                  )\n",
+        "  return test_predictions"
+      ],
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "93Utu600hX35"
+      },
+      "source": [
+        "### **CREATING THE DECODING RNN LAYER**\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h101mfeMhmhv"
+      },
+      "source": [
+        "def decoder_rnn(decoder_embedded_input, decoder_embedded_matrix, encoder_state, num_words, sequence_length, rnn_size, num_layers, word2int, keep_prob, batch_size) :\n",
+        "  with tf.variable_scope(\"decoding\") as decoding_scope : \n",
+        "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+        "    lstm_dropout = tf.contrib.rnn.DropoutWrapper(lstm, input_keep_prob = keep_prob)\n",
+        "    decoder_cell = tf.contrib.rnn.MultiRNNCell([lstm_dropout] * num_layers)\n",
+        "    # Initialize Weights\n",
+        "    weights = tf.truncated_normal_initializer(stddev = 0.1)\n",
+        "    # Get the biases\n",
+        "    biases = tf.zeros_initializer()\n",
+        "    output_function = lambda x : tf.contrib.layers.fully_connected(x,\n",
+        "                                                                   num_words,\n",
+        "                                                                   None, \n",
+        "                                                                   scope = decoding_scope,\n",
+        "                                                                   weights_initializer = weights,\n",
+        "                                                                   biases_initializer = biases\n",
+        "                                                                   )\n",
+        "    training_predictions = decode_training_set(encoder_state,\n",
+        "                                               decoder_cell,\n",
+        "                                               decoder_embedded_input,\n",
+        "                                               sequence_length,\n",
+        "                                               decoding_scope,\n",
+        "                                               output_function,\n",
+        "                                               keep_prob,\n",
+        "                                               batch_size                                          \n",
+        "                                               )\n",
+        "    decoding_scope.reuse_variables()\n",
+        "    test_predictions = decode_test_set(encoder_state,\n",
+        "                                       decoder_cell,\n",
+        "                                       decoder_embedded_matrix,\n",
+        "                                       word2int['<SOS>'],\n",
+        "                                       word2int['<EOS>'],\n",
+        "                                       sequence_length-1,\n",
+        "                                       num_words,\n",
+        "                                       decoding_scope,\n",
+        "                                       output_function,\n",
+        "                                       keep_prob,\n",
+        "                                       batch_size\n",
+        "                                       )\n",
+        "  return training_predictions, test_predictions"
+      ],
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IMBXKmF1lVJO"
+      },
+      "source": [
+        "### **BUILDING THE SEQUENCE TO SEQUENCE MODEL**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wNNZnwYplUtz"
+      },
+      "source": [
+        "def seq2seq_model(inputs, targets, keep_prob, batch_size, sequence_length, answers_num_words, questions_num_words, encoder_embedding_size, decoder_embedding_size, rnn_size, num_layers, questionsWords2int) : \n",
+        "  # Putting together the encoder and the decoder\n",
+        "  encoder_embedded_input = tf.contrib.layers.embed_sequence(inputs, \n",
+        "                                                            answers_num_words+1,\n",
+        "                                                            encoder_embedding_size,\n",
+        "                                                            initializer = tf.random_uniform_initializer(0,1)\n",
+        "                                                            )\n",
+        "  encoder_state = encoder_rnn(encoder_embedded_input, rnn_size, num_layers, keep_prob, sequence_length)\n",
+        "  preprocessed_targets = preprocess_targets(targets, questionsWords2int, batch_size)\n",
+        "  decoder_embeddings_matrix = tf.Variable(tf.random_uniform([questions_num_words+1, decoder_embedding_size], 0, 1))\n",
+        "  decoder_embedded_input = tf.nn.embedding_lookup(decoder_embeddings_matrix, preprocessed_targets)\n",
+        "  training_predictions, test_predictions = decoder_rnn(decoder_embedded_input, \n",
+        "                                                       decoder_embedded_matrix, \n",
+        "                                                       encoder_state, \n",
+        "                                                       num_words, \n",
+        "                                                       sequence_length, \n",
+        "                                                       rnn_size, \n",
+        "                                                       num_layers, \n",
+        "                                                       questionsWords2int,\n",
+        "                                                       keep_prob, \n",
+        "                                                       batch_size\n",
+        "                                                       )\n",
+        "  return training_predictions, test_predictions"
+      ],
+      "execution_count": 35,
+      "outputs": []
     }
   ]
 }
