--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -9,11 +9,6 @@
         "gjkGMW8AT4BI",
         "d0ppNDC5UZfc",
         "OlLWxWkQLnEv",
-        "nsedleO9Lt2A",
-        "0XcV0-0yNnPf",
-        "_7nFQnjjQwuI",
-        "Qa44Osn5Uagy",
-        "Yiw6nVVWdjow",
         "93Utu600hX35",
         "IMBXKmF1lVJO"
       ],
@@ -72,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eq9_lA0TUIoP",
-        "outputId": "953ce715-b111-4068-82b4-d8717d1b7968"
+        "outputId": "bb7e4058-1c3b-46a2-e7db-0051c21e75cd"
       },
       "source": [
         "from google.colab import drive\n",
@@ -137,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wfe0NAxZbNUJ",
-        "outputId": "91415b0e-7212-4e6b-b3aa-6710ef0e34cd"
+        "outputId": "ca1094be-4987-4a95-ce8b-78d6a4319bc1"
       },
       "source": [
         "lines[0:20]"
@@ -184,7 +179,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vBnDBPs7bPoS",
-        "outputId": "964d77b0-fe48-47fa-9e8a-502cacfc90fa"
+        "outputId": "8b6b5f4d-ad7e-451a-e29c-55a0b80030dd"
       },
       "source": [
         "conversations[0:20]"
@@ -242,7 +237,8 @@
         "id2line = {}\n",
         "\n",
         "for line in lines :\n",
-        "  _line = line.split(' +++$+++ ') # splitting the line by the code word `+++$+++`\n",
+        "  # Splitting the line by the code word `+++$+++`\n",
+        "  _line = line.split(' +++$+++ ') \n",
         "  if len(_line) == 5 : \n",
         "      id2line[_line[0]] = _line[4]"
       ],
@@ -280,7 +276,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P_IWnldiZiyv",
-        "outputId": "2156de19-c7be-49b2-f9ab-9c23ba0f96bf"
+        "outputId": "3f86a41f-fd67-4a60-e735-dd242310f529"
       },
       "source": [
         "conversations_ids[0:20]"
@@ -353,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zW8yUeIZaw78",
-        "outputId": "07493f98-5a8e-442b-f3ab-c6ecdcaf37d3"
+        "outputId": "dba66731-c0c3-4824-81f9-4021ef924284"
       },
       "source": [
         "questions[0:20]"
@@ -400,7 +396,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2PIAMsqda4ip",
-        "outputId": "33ad77fc-2590-4781-99d6-8489bc40fcc3"
+        "outputId": "e74d02e2-1514-4237-9dad-99716181bcd5"
       },
       "source": [
         "answers[0:20]"
@@ -505,7 +501,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FBSzp9KQehFX",
-        "outputId": "9e6f69cb-8be5-46e1-d933-ff027cef1aa5"
+        "outputId": "8c3818dd-1696-43f1-90f5-e92670177db9"
       },
       "source": [
         "clean_questions[0:20]"
@@ -575,7 +571,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ftTpHEKmej0n",
-        "outputId": "ed43ec4e-9b9c-4301-947a-e0ce016724d7"
+        "outputId": "4e394226-6581-42db-9301-6c6142d28a58"
       },
       "source": [
         "clean_answers[0:20]"
@@ -763,7 +759,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "81b3Piulz23B",
-        "outputId": "9e9f756a-656c-405a-8762-975319a184fb"
+        "outputId": "ec941ba5-0964-46a0-9549-acf56f46d610"
       },
       "source": [
         "clean_answers[0:20]"
@@ -870,7 +866,8 @@
         "sorted_clean_questions = []\n",
         "sorted_clean_answers = []\n",
         "\n",
-        "for length in range (1, 25) : # Min length = 1, Max length = 24\n",
+        "# Min length = 1, Max length = 24\n",
+        "for length in range (1, 25) : \n",
         "  for i in enumerate(questions_to_int) :\n",
         "    if len(i[1]) == length :\n",
         "      sorted_clean_questions.append(questions_to_int[i[0]])\n",
@@ -886,7 +883,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rwVCY8Om4dQf",
-        "outputId": "c2f99f36-893d-4bd6-d109-b53a5d61dfa8"
+        "outputId": "fcb3d399-f8c2-4e82-c55d-ce2ca86678f4"
       },
       "source": [
         "sorted_clean_questions[0:20]"
@@ -933,7 +930,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_TjBBe2V4fmr",
-        "outputId": "7f5716d0-4893-4269-f45b-42146a710293"
+        "outputId": "455c58d3-bd78-4496-ef2b-6dea7f04f882"
       },
       "source": [
         "sorted_clean_answers[0:20]"
@@ -1117,8 +1114,10 @@
       },
       "source": [
         "def preprocess_targets(targets, word2int, batch_size) :\n",
-        "  left_side = tf.fill([batch_size, 1], word2int['<SOS>']) # First word should be a starting token\n",
-        "  right_side = tf.strided_slice(targets, [0,0], [batch_size, -1], [1,1]) # Stride and slide each target\n",
+        "  # First word should be a starting token\n",
+        "  left_side = tf.fill([batch_size, 1], word2int['<SOS>']) \n",
+        "  # Stride and slide each target\n",
+        "  right_side = tf.strided_slice(targets, [0,0], [batch_size, -1], [1,1]) \n",
         "  preprocessed_targets = tf.concat([left_side, right_side], axis = 1)\n",
         "  return preprocessed_targets"
       ],
@@ -1166,12 +1165,13 @@
         "  lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
         "  lstm_dropout = tf.contrib.rnn.DropoutWrapper(lstm, input_keep_prob = keep_prob)\n",
         "  encoder_cell = tf.contrib.rnn.MultiRNNCell([lstm_dropout] * num_layers)\n",
+        "  # Input and ouput size of the forward and backward cell must match\n",
         "  _, encoder_state = tf.nn.bidirectional_dynamic_rnn(cell_fv = encoder_cell,\n",
         "                                                                  cell_bv = encoder_cell,\n",
         "                                                                  sequence_length = sequence_length,\n",
         "                                                                  inputs = rnn_inputs,\n",
         "                                                                  dtype = tf.float32\n",
-        "                                                                  ) # Input and ouput size of the forward and backward cell must match\n",
+        "                                                                  ) \n",
         "  return encoder_state                                                                 "
       ],
       "execution_count": 31,
@@ -1214,13 +1214,14 @@
         "def decode_training_set(encoder_state, decoder_cell, decoder_embedded_input, sequence_length, decoding_scope, output_function, keep_prob, batch_size) :\n",
         "  attention_states = tf.zeros([batch_size, 1, decoder_cell.output_size])\n",
         "  attention_keys, attention_values, attention_score_function, attention_construct_function = tf.contrib.seq2seq.prepare_attention(attention_states, attention_option = \"bahdanau\", num_units = decoder_cell.output_size)\n",
+        "  # Training for dynamic rnn decoder\n",
         "  training_decoder_function = tf.contrib.seq2seq.attention_decoder_fn_train(encoder_state[0],\n",
         "                                                                            attention_keys,\n",
         "                                                                            attention_values,\n",
         "                                                                            attention_score_function,\n",
         "                                                                            attention_construct_function,\n",
         "                                                                            name = \"attn_dec_train\"\n",
-        "                                                                            ) # training for dynamic rnn decoder\n",
+        "                                                                            ) \n",
         "  decoder_output, _, _ = tf.contrib.seq2seq.dynamic_rnn_decoder(decoder_cell,\n",
         "                                                                training_decoder_function,\n",
         "                                                                decoder_embedded_input,\n",
